--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^5.1.3",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.26.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
